--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul class="redes-sociais">
           <li>
             <a
-              href="https:www.linkedin.com/in/fábio-gomes-aguiar-65b411286"
+              href="https://www.linkedin.com/in/fábio-gomes-aguiar-65b411286"
               title="Ir para o LinkedIn"
               target="_blank"
             >
